--- a/index.html
+++ b/index.html
@@ -318,11 +318,11 @@
         <h3>Un Mensaje Especial...</h3>
         
         <p>
-            Hola mi Reina,
+            Hola mi Reina.
             <br><br>
             Estoy sorprendido con todo lo que lograste en este tiempo... 
             <br><br>
-            Talvez sea egoista por querer que estes solo conmigo... <br> Lo siento si hice las cosas mal espero te vaya bien y estes bien... <br> <br> Para mi siempre seras mi Reina, Niña y el amor de mi vida...
+            Talvez sea egoista por querer que estes solo conmigo... <br> Lo siento si hice las cosas mal espero te este yendo bien y estes bien... <br> <br> Para mi siempre seras mi Reina, Niña y el amor de mi vida... <br><br> Te amo con todo mi corazon...
         </p>
         <button id="close-message-button">Cerrar</button>
     </div>
