--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
 
     
 <div id="intro-overlay">
-        <h3>Para la chica más linda del mundo ❤️</h3>
-        <button id="intro-button">De el futuro amor de tu vida.</button>
+        <h3>Para: La chica más linda del mundo ❤️</h3>
+        <button id="intro-button">De: El futuro amor de tu vida.</button>
 </div>
 
 <div id="message-overlay" class="hidden">
