--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
 
 <div class="container">
     <header>
-        <h3>Para una </h3>
-        <h1>Reina</h1>
+        <h3>Para </h3>
+        <h1>Mi Niña <3</h1>
         <h2>Aquel Nap Zzz</h2>
         
         <div class="audio-wave">
