--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         <h3>Un Mensaje Especial...</h3>
         
         <p>
-            Hola...
+            Gracias por todo hoy día cumplimos un aniversario más ya no son como los otros que vivimos. <br> Eres una  persona  muy especial, mi amor mil gracias por permitirme estar a tu lado. <br> De todo corazon Jesus...❤️
         </p>
         <button id="close-message-button">Cerrar</button>
     </div>
